[workspace]
default-members = ["crates/pevm"]
members = ["bins/fetch", "crates/pevm"]
resolver = "2"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "warn"

[workspace.dependencies]
pevm = { path = "crates/pevm", features = ["rpc-storage"] }

# alloy
alloy-chains = "0.1.44"
alloy-consensus = "0.5.4"
alloy-primitives = { version = "0.8.10", features = [
  "asm-keccak",
  "map-fxhash",
] }
alloy-provider = "0.5.4"
alloy-rlp = "0.3.9"
alloy-rpc-types = "0.5.4"
alloy-transport = "0.5.4"
alloy-transport-http = "0.5.4"
alloy-trie = "0.7.2"

# Will remove [revm] with https://github.com/risechain/pevm/issues/382.
revm = { git = "https://github.com/risechain/revm", rev = "5c11b33574ce96e3d8df8c3eb1ecc25497438975", features = [
  "serde",
] }
revme = { git = "https://github.com/risechain/revm", rev = "5c11b33574ce96e3d8df8c3eb1ecc25497438975" }

# OP
op-alloy-consensus = "0.5.2"
op-alloy-network = "0.5.2"
op-alloy-rpc-types = "0.5.2"

bincode = "1.3.3"
# We can roll our own but [revm] depends on this anyway.
bitflags = "2.6.0"
bitvec = "1.0.1"
clap = { version = "4.5.20", features = ["derive"] }
criterion = "0.5.1"
dashmap = "6.1.0"
flate2 = "1.0.34"
hashbrown = "0.15.0"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = "0.12.9"
rpmalloc = { version = "0.2.2", features = ["thread_cache", "global_cache"] }
rustc-hash = "2.0.0"
serde = "1.0.214"
serde_json = "1.0.132"
smallvec = "1.13.2"
snmalloc-rs = "0.3.6"
thiserror = "1.0.66"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
walkdir = "2.5.0"
